<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lecture_theatre"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewModule1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module1"
        android:textSize="20dp"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/textViewModule2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module2"
        android:textColor="@color/red"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewModule3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module3"
        android:textColor="@color/red"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewModule4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/module4"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewModule5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/module5"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewModule6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/module6"
        android:textSize="20dp"/>


</LinearLayout>